Added on to html

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2> Home </h2>
+<div class="jumbotron text-center">
+    <h1> Welcome to A Web Dev Team</h1>
+    <h3>Your personal channel to fix your software problems.</h3>
+</div>
