--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,12 @@
     
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <div class="nav navbar-nav navbar-right">
-        <% if current_user %>
-          <%= button_to "sign Out", destory_user_session_path, method: :delete, class: 'btn btn-warning navbar-btn' %>
-        <% else %>
-          <%= link_to "Log in", new_user_session_path, class: 'btn btn-warning navbar-btn', methods: :get %>
-          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-warning navbar-btn', method: :get %>
-        <% end %>
+          <% if current_user %>
+            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-warning navbar-btn' %>
+          <% else %>
+            <%= link_to "Log in", new_user_session_path, class: 'btn btn-warning navbar-btn', methods: :get %>
+            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-warning navbar-btn', method: :get %>
+          <% end %>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", about_path %></li>
