--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
             <h2  class="text-center">Basic Membership</h2>
             <h4 class="text-cente"> Sign-up for Free and get help with all your technical needs!</h4>
             <br/>
-            <%= link_to "Sign Up for Free", new_user_registration_path, class: 'btn btn-warning btn-lg btn-block'  %>
+            <%= link_to "Sign Up for Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-warning btn-lg btn-block'  %>
         </div>
     </div>
     <div class="col-md-6">
@@ -16,7 +16,7 @@
             <h2 class="text-center"> Pro Membership</h2>
             <h4 class="text-cente"> Get discounted ticket prices and preference over non-pro accounts when it  comes to getting your problem fixed.</h4>
             <br/>
-            <%= link_to "Sign Up for Pro", new_user_registration_path, class: 'btn btn-warning btn-lg btn-block'  %>
+            <%= link_to "Sign Up for Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-warning btn-lg btn-block'  %>
         </div>
     </div>
 </div>
