--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Create your profile!", new_user_profile_path(current_user)  if current_user %>
+
 <div class="jumbotron text-center">
     <h1> Welcome to A Web Dev Team</h1>
     <h3>Your personal channel to fix your software problems.</h3>
