--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,3 @@
-<div class="jumbotron text-center">
-  <h1>Welcome to Dev Match</h1>
-  <h3>A membership site where entrepreneurs can meet developers.</h3>
-</div>
 <div class="row">
   <% if user_signed_in? %>
     <div class="col-md-6">
@@ -23,21 +19,42 @@
         <%= link_to "Visit the community", "#", class: 'btn btn-warning btn-lg btn-block' %>
       </div>
     </div>
-  <% else %>
-    <div class="col-md-6">
-      <div class="well">
-        <h2 class="text-center">Basic Membership</h2>
-        <h4>Sign up for free and get basic access to the community.</h4>
-        <br/>
-        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-warning btn-lg btn-block' %>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="well">
-        <h2 class="text-center">Pro Membership</h2>
-        <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
-        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-warning btn-lg btn-block' %>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
 </div>
+
+<div class="jumbotron">
+  <h1>A Web Dev Team</h1>
+</div>
+
+<section>
+  <div class="a col-md-4">
+  <h3> Fun Facts </h3>
+  <p> dkfa;sdlfjlaksdjfl;kadflkjasdlfkj
+    aklsdfj;ladfj;lksdjflk;asdjflj
+    al;skdjf;laskfj;klasjdfklasdlfk
+    al;sdfjka;sdlfjakl;sdf 
+  </p>
+  </div>
+  
+  <div class="a col-md-4">
+  <h3> Testimony </h3>
+  <p> "This Place is great" <br> - Jeff
+    </br>
+  <br>
+    "Definetly will come back" <br> -Bob
+  <br>
+  <br>
+    "Tots ma gotes recommend dog" <br> -Hipster
+  </p>
+  </div>
+  
+    <div class="a col-md-4">
+  <h3> Online </h3>
+  <p> dkfa;sdlfjlaksdjfl;kadflkjasdlfkj
+    aklsdfj;ladfj;lksdjflk;asdjflj
+    al;skdjf;laskfj;klasjdfklasdlfk
+    al;sdfjka;sdlfjakl;sdf 
+  </p>
+  </div>
+  
+</section>
