--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
+<%= image_tag @user.profile.avatar.url %>
 <%= @user.profile.first_name %> <%= @user.profile.last_name %>
 <%= @user.profile.job_title %><br/>
-  <%= @user.profile.phone_number %><br/>
-  <%= @user.profile.contact_email %><br/>
+<%= @user.profile.phone_number %><br/>
+<%= @user.profile.contact_email %><br/>
 <%= @user.profile.description %><br/>
